 - API: ScreenDockWindow now closes and reopens its ScreenDockWindows if the owner window (the root window) changed. This way the windows stay open if the client switches to a new root frame.
 ! API: In order to prevent focus stealing ScreenDockWindow has a new method "setPreventFocusStealing". This method is only used if the root window changed. Focus stealing prevention is unset after ScreenDockStation.PREVENT_FOCUS_STEALING_DELAY milliseconds.
 - API: New CStationContainerHistoryRewriter tries to ensure that a CDockable stays on the same CStationContainer as long as possible.
 - Bugfix: A removed MultipleCDockable did not forget its unique identifier, when adding it again this caused an exception if another dockable got that unique id.
 - Bugfix: The location of a removed CDockable could be forgotten even if CControl.shoudStore returned true.

[v1.1.1p6]
 - API: New GlobalMouseDispatcher collects and distributes MouseEvents. Can be used by clients to listen to events.
 ! API: The "check" methods of MouseFocusObserver have been removed
 - API: Added magnet feature to ScreenDockStation, clients can configure the feature through an AttractorStrategy or a MagnetStrategy. The feature allows windows to snap in place, and to stick together on movement and resizing.
 ! API: Creating a DockableDisplayer now requires the use of a DisplayerRequest. Instead of just one possibility to replace the factory creating DockableDisplayers, clients and extensions have now several possiblities, e.g. directly in a Dockable or in a DockStation
  
[Todo]
- DockActions/Tabs: assign priority to elements; more important elements stay longer on screen if there is not enough space for all elements
- Drop StackDockStation over Dockable and merge them
- EclipseTheme: Drop Dockable over Dockable and allow to select which Dockable has which index in the new StackDockStation.
- SingleParentRemover: Implement bugfix as described in the file